# fayd-protocol

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: architecture.md  faq.md  vision.md
examples/: hello-node.md
fayd-node/: Cargo.toml
fayd-node/src/: main.rs
