[package]
name = "fayd-node"
version = "0.1.0"
edition = "2021"
description = "Fayd Protocol Node — Decentralized compute for idle devices"
license = "Apache-2.0"
repository = "https://github.com/madanimkhitar22-beep/fayd-protocol"
readme = "../README.md"
authors = ["Fayd Protocol Contributors"]
keywords = ["decentralized", "compute", "protocol", "ai", "infrastructure"]
categories = ["network-programming", "concurrency"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic primitives
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.10"

# Hex encoding
hex = "0.4"

# System information
sysinfo = "0.30"

[dev-dependencies]
# Testing utilities
tempfile = "3.9"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary
